DGC-000: Fix the flicker header effect. (#145)

--- a/web/themes/custom/govcon/components/organisms/header/header.scss
+++ b/web/themes/custom/govcon/components/organisms/header/header.scss
@@ -11,13 +11,20 @@ header {
   width: 100%;
   transition: all 0.3s ease-in-out;
 
-  &:has(.sticky-header) {
+  @include mixins.media-breakpoint-up(lg) {
     position: fixed;
-    top: 0;
+  }
 
-    +main {
-      margin-top: 132px;
+  &:has(.sticky-header) {
+    +.ghost {
+      display: block;
     }
+  }
+}
+
+.ghost {
+  @include mixins.media-breakpoint-up(lg) {
+    height: 184px;
   }
 }
 
